--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   "dependencies": {
     "cors": "^2.8.4",
     "date-fns": "^1.29.0",
+    "dompurify": "^1.0.4",
     "express": "^4.16.3",
+    "jsdom": "^11.11.0",
     "socket.io-server": "^1.0.0-b",
     "uuid": "^3.2.1"
   },
